# path_searching

./: CMakeLists.txt  package.xml
doc/: COMPREHENSIVE_SOURCE_CODE_GUIDE.md  MODIFICATION_SUMMARY.md  README.md  algorithm_flow_diagram.md  file_organization_analysis.md  file_organization_summary.md  function_input_output_specification.md  kinodynamic_astar_architecture.md  source_code_reading_guide.md
include/path_searching/: kinodynamic_astar.h
launch/: path_tracking.launch.py
path_searching/: __init__.py  astar_planner_node.py  odom_simulator.py  omnidirectional_tracker_node.py  path_decision_node.py  pure_pursuit_node.py
src/: kinodynamic_astar.cpp  kinodynamic_astar_node.cpp
